--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "package.json",
+  "name": "plotify-mmdb",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "npx vite build",
     "preview": "vite preview --host"
   },
   "dependencies": {
@@ -35,5 +35,8 @@
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
     "vite": "^6.1.0"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
